2006-08-16  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpbrushtool.c: don't include gimp-intl.h.

2006-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/autocrop.c (autocrop): fixed overzealousness
	when cropping on a drawable border (bug #337888).

2006-08-16  Sven Neumann  <sven@gimp.org>

	* app/base/tile-cache.c: actually enable tile cache locking and
	added a missing lock in tile_idle_preswap(). Should fix bug #346923.

2006-08-15  Mukund Sivaraman  <muks@mukund.org>

	* app/dialogs/about-dialog.c: Added a label about unstable status
	to the about dialog.

2006-08-15  Michael Natterer  <mitch@gimp.org>

	* app/tools/Makefile.am
	* app/tools/tools-types.h
	* app/tools/gimpbrushtool.[ch]: new GimpPaintTool subclass which
	completely handles brush outline drawing.

	* app/tools/gimppainttool.[ch]: removed all brush stuff here.

	* app/tools/gimpclonetool.[ch]
	* app/tools/gimpconvolvetool.[ch]
	* app/tools/gimpdodgeburntool.[ch]
	* app/tools/gimperasertool.[ch]
	* app/tools/gimppaintbrushtool.[ch]
	* app/tools/gimpsmudgetool.[ch]: derive from GimpBrushTool.

	* app/tools/gimpinktool.c: removed now obsolete cursor_update()
	implementation.

2006-08-15  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpeditselectiontool.c (gimp_edit_selection_tool_start):
	added check for GIMP_TRANSLATE_MODE_MASK_COPY_TO_LAYER which was
	forgotten when this mode was introduced.

2006-08-15  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.[ch] (gimp_shm_addr): the return value isn't const.

	* app/tools/gimpcurvestool.c (curves_graph_events): fixed cursor
	handling on button press and release events.

2006-08-15  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: do not add a toggle for
	"transient-docks" in stable releases (bug #322577).

2006-08-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmp.[ch]
	* plug-ins/bmp/bmpread.c
	* plug-ins/bmp/bmpwrite.c: applied patch from Piotr Filiciak that